[package]
name = "mcli"
version = "0.1.0"
authors = ["Xiuming Lee <lxmcoder@163.com>"]
description = "A command-line tool."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
#time = "0.3.2"
time = { version = "0.3.2", features = ["formatting","parsing"] }  ## 开启相应的特性，已达到使用特定功能的目的，可以通过查看相应的方法注解查看相应的特性分类
